--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Construcciones & Remodelaciones SUARS - Tu Aliado en Soacha, Cundinamarca</title>
+    <title>Construcciones & Remodelaciones SUARS - Tu Aliado en Bogotá, Cundinamarca</title>
     <meta name="description" content="Expertos en construcción y remodelación de cocinas, baños, obras nuevas y acabados en Soacha, Cundinamarca. Transforma tus espacios con SUARS.">
-    <meta name="keywords" content="construcción, remodelación, cocinas, baños, obras nuevas, pintura, acabados, Soacha, Cundinamarca, SUARS">
+    <meta name="keywords" content="construcción, remodelación, cocinas, baños, obras nuevas, pintura, acabados, Soacha, Cundinamarca, SUARS, Bogotá">
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta name="author" content="Construcciones & Remodelaciones SUARS">
+    <link rel="icon" type="image/png" href="./img/Captura de pantalla 2025-09-03 072729.png">
 </head>
 <body>
 
@@ -24,11 +26,11 @@
                 <li><a href="#sobre-nosotros" class="nav-item">Nosotros</a></li>
                 <li><a href="#contacto" class="nav-item">Contacto</a></li>
             </ul>
-            <div class="hamburger">
+            <button class="hamburger" aria-label="Abrir menú de navegación">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </button>
         </div>
     </nav>
 
@@ -102,8 +104,8 @@
                         <img src="./img/4.jpg" alt="Nueva Vivienda Residencial">
                     </div>
                 </div>
-                <button class="carousel-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
-                <button class="carousel-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <button class="carousel-btn prev-btn" aria-label="Proyecto anterior"><i class="fas fa-chevron-left"></i></button>
+                <button class="carousel-btn next-btn" aria-label="Siguiente proyecto"><i class="fas fa-chevron-right"></i></button>
             </div>
             <a href="#contacto" class="btn secondary-btn mt-5 animate-pulse animate-delay-600">¡Inicia tu Próximo Proyecto!</a>
         </div>
@@ -125,33 +127,34 @@
             </div>
         </div>
     </section>
-<section id="contacto" class="section contact-section bg-dark">
-    <div class="container">
-        <h2 class="text-white animate-fade-in-up">Hablemos de tu Próximo Proyecto</h2>
-        <p class="section-subtitle text-white animate-fade-in-up animate-delay-200">Estamos aquí para responder tus preguntas y brindarte la mejor asesoría.</p>
-        <div class="contact-grid">
-            <div class="contact-info animate-fade-in-left">
-                <h3>Visítanos o Llámanos</h3>
-                <p><i class="fas fa-map-marker-alt icon-color"></i> <strong>Ubicación:</strong> Bogotá, Cundinamarca, Colombia</p>
-                <p><i class="fas fa-phone icon-color"></i> <strong>Teléfono:</strong> <a href="tel:+573013303933">+57 301 330 3933</a></p>
-                <p><i class="fab fa-whatsapp icon-color"></i> <strong>WhatsApp:</strong> <a id="whatsapp-link" href="https://api.whatsapp.com/send/?phone=573013303933&text=Hola,+me+gustaría+saber+más+sobre+sus+servicios." target="_blank">+57 301 330 3933</a></p>
-                <div class="social-icons">
-                    <a href="https://www.facebook.com/profile.php?id=61580069499957" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/remodelaciones_suars/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.tiktok.com/@remodelaciones_suars?is_from_webapp=1&sender_device=pc" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+
+    <section id="contacto" class="section contact-section bg-dark">
+        <div class="container">
+            <h2 class="text-white animate-fade-in-up">Hablemos de tu Próximo Proyecto</h2>
+            <p class="section-subtitle text-white animate-fade-in-up animate-delay-200">Estamos aquí para responder tus preguntas y brindarte la mejor asesoría.</p>
+            <div class="contact-grid">
+                <div class="contact-info animate-fade-in-left">
+                    <h3>Visítanos o Llámanos</h3>
+                    <p><i class="fas fa-map-marker-alt icon-color"></i> <strong>Ubicación:</strong> Bogotá, Cundinamarca, Colombia</p>
+                    <p><i class="fas fa-phone icon-color"></i> <strong>Teléfono:</strong> <a href="tel:+573013303933">+57 301 330 3933</a></p>
+                    <p><i class="fab fa-whatsapp icon-color"></i> <strong>WhatsApp:</strong> <a id="whatsapp-link" href="#" target="_blank">+57 301 330 3933</a></p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/profile.php?id=61580069499957" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/remodelaciones_suars/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@remodelaciones_suars?is_from_webapp=1&sender_device=pc" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="contact-cta animate-fade-in-right">
+                    <h3>¡Pide tu presupuesto al instante!</h3>
+                    <p>Haz clic en el botón de WhatsApp para contactarnos directamente. Estaremos encantados de escucharte y planificar tu proyecto.</p>
+                    <a id="whatsapp-button-cta" href="#" class="btn primary-btn whatsapp-btn animate-pulse">
+                        <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
+                    </a>
                 </div>
             </div>
-            <div class="contact-cta animate-fade-in-right">
-                <h3>¡Pide tu presupuesto al instante!</h3>
-                <p>Haz clic en el botón de WhatsApp para contactarnos directamente. Estaremos encantados de escucharte y planificar tu proyecto.</p>
-                <a id="whatsapp-button-cta" href="https://api.whatsapp.com/send/?phone=573013303933&text=Hola,+me+gustaría+saber+más+sobre+sus+servicios." class="btn primary-btn whatsapp-btn animate-pulse">
-                    <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
-                </a>
-            </div>
         </div>
+    </section>
 
-    </div>
-</section>
     <footer>
         <div class="container">
             <p>© 2025 Construcciones & Remodelaciones SUARS. Todos los derechos reservados.</p>
